--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
            <p></p>
            <center>
            <div class="cajabase">
-           <br><img src="img.jpeg.png"></a>
+           <br><img src="img/img.jpeg.png"></a>
             </div>
             </center>
             <p>
