--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <nav>
             <ul>
                 <li><a href="plantas/plantas.html">PLANTAS</a> </li>
-                <li><a href="cancionero/MENU CANCIONERO.html">CANCIONERO</a> </li>
+                <li><a href="cancionero/sonido.html">CANCIONERO</a> </li>
             </ul>
             </nav>
             <br>
