--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 <li><a href="cancionero/sonido.html">CANCIONERO</a> </li>
                 <li><a href="pagina/segundo.html">MI SITIO WEB</a> </li>
                 <li><a href="mascotas/mascota.html">SITIO DE ADOPCI&Oacute;N DE MASCOTAS</a> </li>
+                <li><a href="proyecto/index.html">ORDINARIO TEATRO</a> </li>
             </ul>
             </nav>
             <br>
@@ -128,3 +129,4 @@
 </center>
 </body>
 </html>
+
